--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -4,20 +4,10 @@
             <div class="col-lg-4 mx-auto">
                 <h2 class="text-center mb-4">Registro</h2>
                 <div class="auto-form-wrapper">
-                    <form action="#">
+                    <form (ngSubmit)="onSubmit(f.value)" #f='ngForm'>
                         <div class="form-group">
                             <div class="input-group">
-                                <input type="email" class="form-control" placeholder="Correo">
-                                <div class="input-group-append">
-                                    <span class="input-group-text">
-                      <i class="fa fa-check-circle"></i>
-                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="password" class="form-control" placeholder="Password">
+                                <input ngModel name="email" required type="email" class="form-control" placeholder="Correo">
                                 <div class="input-group-append">
                                     <span class="input-group-text">
                       <i class="fa fa-check-circle"></i>
@@ -27,7 +17,28 @@
                         </div>
 
                         <div class="form-group">
-                            <button class="btn btn-primary submit-btn btn-block">Crear cuenta</button>
+                            <div class="input-group">
+                                <input ngModel name="nombre" required type="text" class="form-control" placeholder="Nombre">
+                                <div class="input-group-append">
+                                    <span class="input-group-text">
+                          <i class="fa fa-check-circle"></i>
+                        </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input ngModel name="password" required type="password" class="form-control" placeholder="Password">
+                                <div class="input-group-append">
+                                    <span class="input-group-text">
+                      <i class="fa fa-check-circle"></i>
+                    </span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <button [disabled]="f.invalid" class="btn btn-primary submit-btn btn-block">Crear cuenta</button>
                         </div>
                         <div class="text-block text-center my-3">
                             <span class="text-small font-weight-semibold">ya tienes una cuenta?</span>
