--- a/src/app/ingreso-egreso/datalle/datalle.component.html
+++ b/src/app/ingreso-egreso/datalle/datalle.component.html
@@ -10,16 +10,22 @@
                             <th>Descripción</th>
                             <th>Monto</th>
                             <th>Tipo</th>
-                            <th></th>
+                            <th>Borrar</th>
                         </tr>
                     </thead>
 
                     <tbody>
-                        <tr>
-                            <td>Descripción</td>
-                            <td>Monto</td>
-                            <td>Tipo</td>
-                            <td>acciones</td>
+                        <tr *ngFor="let item of detalles">
+                            <td>{{ item.descripcion}}</td>
+                            <td>{{ item.monto | currency}}</td>
+                            <td [ngClass]="{ 'text-success':item.tipo=='ingreso','text-danger':item.tipo=='egreso' }">{{ item.tipo}}</td>
+                            <td>
+                                <button (click)="borrarItem(item.id)" class="btn btn-danger">
+
+                                    <i class="fa fa-trash"></i>
+                                    Borrar
+                                </button>
+                            </td>
                         </tr>
                     </tbody>
 
