--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
                     </div>
 
                     <div class="text-wrapper">
-                        <p class="profile-name">Cristobal Colón</p>
+                        <p class="profile-name">{{nombre}}</p>
                         <div>
                             <small class="designation text-muted">Gerente</small>
                         </div>
@@ -40,7 +40,7 @@
             </a>
         </li>
 
-        <li (click)="auth.logout()" class="nav-item">
+        <li (click)="logout()" class="nav-item">
             <a class="nav-link cursor">
                 <i class="menu-icon fa fa-sign-out-alt"></i>
                 <span class="menu-title">Cerrar sesión</span>
